--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=AD7747
-version=1.0.3
-author=Dan
+version=1.0.4
+author=Dana
 maintainer=EvilAngel
 sentence=AD7747 Library
 paragraph=this Library for support Analog Devices capacitative sensor AD7747. Supports AD77.
