--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=AD7747
 version=1.0.3
-author=Dana
-maintainer=EvilAngel
+author=Evil
+maintainer=Angel
 sentence=AD7747 Library
 paragraph=this Library for support Analog Devices capacitative sensor AD7747. Supports AD77.
 category=Sensors
